--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+#REST
+rest :
+  type : rest
+  resource : "routing_rest.yml"
+  prefix : /api
