--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,9 @@ security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory: ~
+        doctrine:
+            entity:
+                class: AppBundle:User
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,6 +16,13 @@ security:
 
         main:
             anonymous: ~
+
+            logout: ~
+
+            guard:
+                authenticators:
+                    - app.token_authenticator
+
             # activate different ways to authenticate
 
             # http_basic: ~
@@ -22,3 +30,7 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: bcrypt
+        AppBundle\Entity\User: bcrypt
