--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,10 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  app.token_authenticator:
+      class: AppBundle\Security\TokenAuthenticator
+      arguments: ['@doctrine.orm.entity_manager']
+
+  app.user_helper:
+    class: AppBundle\Security\UserHelper
+    arguments: ['@doctrine.orm.entity_manager']
